--- a/Modelo/Modelo.vbproj
+++ b/Modelo/Modelo.vbproj
@@ -162,31 +162,34 @@
       <HintPath>C:\Librerias\QrCode\Gma.QrCodeNet.Encoding.dll</HintPath>
     </Reference>
     <Reference Include="GMap.NET.Core">
-      <HintPath>C:\Librerias\Gmap\GMap.NET.Core.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Gmap\GMap.NET.Core.dll</HintPath>
     </Reference>
     <Reference Include="GMap.NET.WindowsForms">
-      <HintPath>C:\Librerias\Gmap\GMap.NET.WindowsForms.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Gmap\GMap.NET.WindowsForms.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp">
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Gmap\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Data.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Data.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Data.v3.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Windows.CalendarCombo.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Windows.CalendarCombo.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Windows.CalendarCombo.v3.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Windows.Common.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Windows.Common.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Windows.Common.v3.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Windows.GridEX.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Windows.GridEX.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Windows.GridEX.v3.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Windows.Ribbon.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Windows.Ribbon.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Windows.Ribbon.v3.dll</HintPath>
     </Reference>
     <Reference Include="Janus.Windows.UI.v3">
-      <HintPath>C:\Librerias\Janus\Janus.Windows.UI.v3.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\Janus\Janus.Windows.UI.v3.dll</HintPath>
     </Reference>
     <Reference Include="OnBarcode.Barcode.WinForms">
-      <HintPath>C:\Librerias\QrCode\OnBarcode.Barcode.WinForms.dll</HintPath>
+      <HintPath>..\..\..\..\DINASES\DinoM\Dinases\Librerias\QrCode\OnBarcode.Barcode.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="SAPBusinessObjects.WPF.Viewer, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
