--- a/DinoM/Presentacion.vbproj
+++ b/DinoM/Presentacion.vbproj
@@ -1378,6 +1378,7 @@
     <None Include="Resources\grafica.png" />
     <None Include="Resources\estadistico.png" />
     <None Include="Resources\facturacion.png" />
+    <None Include="Resources\logo.png" />
     <Content Include="Resources\man.png" />
     <None Include="Resources\pdf.png" />
     <None Include="Resources\txt.png" />
